terraform/security.tf
resource "aws_security_group" "web_sg" {
  vpc_id = aws_vpc.mern_vpc.id

  ingress { from_port=22 to_port=22 protocol="tcp" cidr_blocks=[var.my_ip] }
  ingress { from_port=80 to_port=80 protocol="tcp" cidr_blocks=["0.0.0.0/0"] }
  ingress { from_port=443 to_port=443 protocol="tcp" cidr_blocks=["0.0.0.0/0"] }
  ingress { from_port=5000 to_port=5000 protocol="tcp" cidr_blocks=["0.0.0.0/0"] }

  egress { from_port=0 to_port=0 protocol="-1" cidr_blocks=["0.0.0.0/0"] }
}

resource "aws_security_group" "db_sg" {
  vpc_id = aws_vpc.mern_vpc.id

  ingress {
    from_port=27017
    to_port=27017
    protocol="tcp"
    security_groups=[aws_security_group.web_sg.id]
  }

  ingress {
    from_port=22
    to_port=22
    protocol="tcp"
    security_groups=[aws_security_group.web_sg.id]
  }

  egress { from_port=0 to_port=0 protocol="-1" cidr_blocks=["0.0.0.0/0"] }
}
